--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-        <link href="france.css" type="text/css" rel="stylesheet">
+        <link href="Ressources/france.css" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&display:swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
