--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         </div>
                         <div  class="conteneur_region_spe"> <!--sert à faire les cadres qui incluent l'image et le petit text-->
                             <div class="region_image">
-                                <img src="img/region/Rhone-Alpes.jpg" alt="magnifiques montagnes verdoyantes" >
-                                <img src="img/region/Rhones-alpes_hover.jpg" class="region_hover">
+                                <img src="Ressources/Img/region/Rhone-Alpes.jpg" alt="magnifiques montagnes verdoyantes" >
+                                <img src="Ressources/Img/region/Rhones-alpes_hover.jpg" class="region_hover">
                             </div>
                             <div class="region_text">
                                 <p>Plongez au plus profond de la nature</p>
@@ -58,8 +58,8 @@
                         </div>
                         <div class="conteneur_region_spe"><!--sert à faire les cadres qui incluent l'image et le petit texte-->
                             <div class="region_image">
-                                <img src="img/region/Ile_de_france.jpg" alt="Capitale de la France">
-                                <img src="img/region/Ile_de_france_hover.jpg" class="region_hover">
+                                <img src="Ressources/Img/region/Ile_de_france.jpg" alt="Capitale de la France">
+                                <img src="Ressources/Img/region/Ile_de_france_hover.jpg" class="region_hover">
                             </div>
                             <div class="region_text">
                                 <p>Faites connaissance avec la Cité des Lumières</p>
@@ -72,8 +72,8 @@
                         </div>
                         <div class="conteneur_region_spe"><!--sert à faire les cadres qui incluent l'image et le petit text-->
                             <div class="region_image">
-                                <img src="Img/region/occitanie.jpg" alt="Magnifique lac entouré de montagnes verdoyantes sous un soleil d'été enchanteur">
-                                <img src="img/region/occitanie_hover.jpg" class="region_hover">
+                                <img src="Ressources/Img/region/occitanie.jpg" alt="Magnifique lac entouré de montagnes verdoyantes sous un soleil d'été enchanteur">
+                                <img src="Ressources/Img/region/occitanie_hover.jpg" class="region_hover">
                             </div>
                             <div class="region_text">
                             <p>Savourez le chant des cigales</p>
@@ -86,8 +86,8 @@
                         </div>
                         <div class="conteneur_region_spe"><!--sert à faire les cadres qui incluent l'image et le petit text-->
                             <div class="region_image">
-                                <img src="Img/region/Pays_de_la_loire.jpeg" alt="H²O">
-                                <img src="img/region/pays_de_la_loire_hover.jpg" class="region_hover">
+                                <img src="Ressources/Img/region/Pays_de_la_loire.jpeg" alt="H²O">
+                                <img src="Ressources/Img/region/pays_de_la_loire_hover.jpg" class="region_hover">
                            </div>
                             <div class="region_text">
                                 <p>Rencontrez le fleuve le plus sauvage d'Europe</p>
@@ -103,42 +103,42 @@
                     </div>
                     <div class="conteneur_paysage_image">
                         <div class="paysage_image" id="nord">
-                            <img src="Img/roue-image/Nord.jpg" alt="Photo des falaise d'Etretat" >
+                            <img src="Ressources/Img/roue-image/Nord.jpg" alt="Photo des falaise d'Etretat" >
                         </div>
                         <div class="paysage_image" id="ouest">
-                            <img src="Img/roue-image/Ouest.jpg" alt="Photo de la tour Eifel de nuit en contrebat " >
+                            <img src="Ressources/Img/roue-image/Ouest.jpg" alt="Photo de la tour Eifel de nuit en contrebat " >
                         </div>
                         <div class="paysage_image" id="ouest_2">
-                            <img src="Img/roue-image/Ouest_2.jpg" alt="Le mont Saint Michel en marée basse" >
+                            <img src="Ressources/Img/roue-image/Ouest_2.jpg" alt="Le mont Saint Michel en marée basse" >
                         </div>
                         <div class="paysage_image" id="sud">
-                            <img src="Img/roue-image/Sud.jpg" alt="Une ville de nuit avec une riviere et les lampadaires d'allumés" >
+                            <img src="Ressources/Img/roue-image/Sud.jpg" alt="Une ville de nuit avec une riviere et les lampadaires d'allumés" >
                         </div>
                         <div class="paysage_image" id="est">
-                            <img src="Img/roue-image/Est_2.jpg" alt="Un petit château perché du style gothique" >
+                            <img src="Ressources/Img/roue-image/Est_2.jpg" alt="Un petit château perché du style gothique" >
                         </div>
                         <div class="paysage_image" id="est_2">
-                            <img src="Img/roue-image/Est.jpg" alt="Petite rue calme de Paris de nuit" >    
+                            <img src="Ressources/Img/roue-image/Est.jpg" alt="Petite rue calme de Paris de nuit" >    
                         </div>                   
                     </div>
                     <div class="conteneur_paysage_hover">
                         <div class="paysage_image" id="nord">
-                            <img src="img/roue-image/nord_hover.webp">
+                            <img src="Ressources/Img/roue-image/nord_hover.webp">
                         </div>
                         <div class="paysage_image" id="ouest">
-                            <img src="img/roue-image/ouest-hover.jpg">
+                            <img src="Ressources/Img/roue-image/ouest-hover.jpg">
                         </div>
                         <div class="paysage_image" id="ouest_2">
-                            <img src="img/roue-image/ouest_2_hover.jpg">
+                            <img src="Ressources/Img/roue-image/ouest_2_hover.jpg">
                         </div>
                         <div class="paysage_image" id="sud">
-                            <img src="img/roue-image/sud-hover.webp">
+                            <img src="Ressources/Img/roue-image/sud-hover.webp">
                         </div>
                         <div class="paysage_image" id="est">
-                            <img src="img/roue-image/est_2_hover.jpg">
+                            <img src="Ressources/Img/roue-image/est_2_hover.jpg">
                         </div>
                         <div class="paysage_image" id="est_2">
-                            <img src="img/roue-image/est-hover.jpg">
+                            <img src="Ressources/Img/roue-image/est-hover.jpg">
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                     
                     <div class="conteneur_specialite_spe_sucre">
                         <div class="specialite_img">
-                            <img src="Img/sucre/Sucre_-_Gateau_Basque.jpg" alt="un gateau basque des plus banal">
+                            <img src="Ressources/Img/sucre/Sucre_-_Gateau_Basque.jpg" alt="un gateau basque des plus banal">
                         </div>
                         <div class="specialite_texte_sucre">
                             <h3>Gâteau Basque</h3>
@@ -163,7 +163,7 @@
                     </div>
                     <div class="conteneur_specialite_spe_sucre">
                         <div class="specialite_img">
-                            <img src="Img/sucre/Sucre_-_Paris-brest.jpg" alt="non ce n'est pas une distance, c'est une maginifque petite patisserie"/>
+                            <img src="Ressources/Img/sucre/Sucre_-_Paris-brest.jpg" alt="non ce n'est pas une distance, c'est une maginifque petite patisserie"/>
                         </div>
                         <div class="specialite_texte_sucre">
                             <h3>Paris-Brest</h3>
@@ -172,7 +172,7 @@
                     </div>
                     <div class="conteneur_specialite_spe_sucre">
                         <div class="specialite_img">
-                            <img src="Img/sucre/Sucre_-_Pastis_Landais.jpg" alt="un superbe pastis landais"/>
+                            <img src="Ressources/Img/sucre/Sucre_-_Pastis_Landais.jpg" alt="un superbe pastis landais"/>
                         </div>
                         <div class="specialite_texte_sucre">
                             <h3>Pastis Landais</h3>
@@ -181,7 +181,7 @@
                     </div>
                      <div class="conteneur_specialite_spe_sucre">
                             <div class="specialite_img">
-                                <img src="Img/sucre/Sucre_-_Pralines.jpg" alt="des pralines alèchantes"/>
+                                <img src="Ressources/Img/sucre/Sucre_-_Pralines.jpg" alt="des pralines alèchantes"/>
                             </div>
                             <div class="specialite_texte_sucre">
                                 <h3>Pralines</h3>
@@ -190,7 +190,7 @@
                         </div>
                         <div class="conteneur_specialite_spe_sucre">
                             <div class="specialite_img">
-                                <img src="Img/sucre/Sucre_-_Canneles.jpeg" alt="De magnifiques petit cannelés"/>
+                                <img src="Ressources/Img/sucre/Sucre_-_Canneles.jpeg" alt="De magnifiques petit cannelés"/>
                             </div>
                             <div class="specialite_texte_sucre">
                                 <h3>Cannelés</h3>
@@ -204,7 +204,7 @@
                 <div class="conteneur_specialite_sale">
                     <div class="conteneur_specialite_spe_sale">
                         <div class="specialite_img">
-                            <img src="Img/sale/Sale_-_Assortiment_de_fromage.jpg" alt="PLEINS DE FROMAGES !!"/>
+                            <img src="Ressources/Img/sale/Sale_-_Assortiment_de_fromage.jpg" alt="PLEINS DE FROMAGES !!"/>
                         </div>
                         <div class="specialite_texte_sale">
                             <h3>Assortiment de Fromage</h3>
@@ -213,7 +213,7 @@
                     </div>
                     <div class="conteneur_specialite_spe_sale">
                         <div class="specialite_img">
-                            <img src="Img/sale/Sale_-_Crepe_bretonne.jpg" alt="Une crepes bretonnes">
+                            <img src="Ressources/Img/sale/Sale_-_Crepe_bretonne.jpg" alt="Une crepes bretonnes">
                         </div>
                         <div class="specialite_texte_sale">
                             <h3>Crèpe Bretonne</h3>
@@ -222,7 +222,7 @@
                     </div>
                     <div class="conteneur_specialite_spe_sale">
                         <div class="specialite_img">
-                            <img src="Img/sale/Sale_-_Fondue_Savoyarde.jpeg" alt="Non, ce n'est pas une image de vrai fondu savoyarde mais ca passe."/>
+                            <img src="Ressources/Img/sale/Sale_-_Fondue_Savoyarde.jpeg" alt="Non, ce n'est pas une image de vrai fondu savoyarde mais ca passe."/>
                         </div>
                         <div class="specialite_texte_sale">
                             <h3>Fondue Savoyarde</h3>
@@ -231,7 +231,7 @@
                     </div>
                     <div class="conteneur_specialite_spe_sale">
                         <div class="specialite_img">
-                            <img src="Img/sale/Sale_-_Salade_Nicoise.jpg" alt="Une assiete de salade Niçoise"/>
+                            <img src="Ressources/Img/sale/Sale_-_Salade_Nicoise.jpg" alt="Une assiete de salade Niçoise"/>
                         </div>
                         <div class="specialite_texte_sale">
                             <h3>Salade Niçoise</h3>
@@ -240,7 +240,7 @@
                     </div>
                     <div class="conteneur_specialite_spe_sale">
                         <div class="specialite_img">
-                            <img src="Img/sale/Sale-_Gigot_dagneau.jpg" alt="Un bon gigot d'agneau"/>
+                            <img src="Ressources/Img/sale/Sale-_Gigot_dagneau.jpg" alt="Un bon gigot d'agneau"/>
                         </div>
                         <div class="specialite_texte_sale">
                             <h3>Gigot d'Agneau</h3>
