--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Lobster&display:swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+        <title>Office de tourisme français</title>
     </head>
     <body>
         <header>
